correcting overlapping elements

--- a/estilo.css
+++ b/estilo.css
@@ -14,7 +14,7 @@ body {
 	overflow-y: scroll;
 }
 /* -- Barra de navegação -- */
-
+/* logo */
 .img-logo {
 	background: url('imgs/logo.png') no-repeat;
 	background-size: contain;
@@ -27,8 +27,8 @@ body {
 } 
 
 .navbar {
-  background-color: white;
   position: fixed; 
+  background-color: white;
   top: 0; 
   left: 0;
   width: 100%; 
@@ -82,15 +82,17 @@ body {
   	transform: translateY(4px);
 }
 
+/* Área Principal */
 #area-principal {
 	background: white;
 	width: 100%;
 	height: 210px;
 	margin-top: 155px;
-	padding-right: 8px;
-	margin-left: 0;
+	/*padding-right: 8px;*/
+	position: absolute;
 	left: 0;
-	
+	z-index: -1;
+
 }
 
 .conteudo {
@@ -107,6 +109,7 @@ h4 {
 	color: #405060;
 	float: left;
 	text-align: center;
+	margin-left: 20px;
 
 }
 
@@ -125,12 +128,13 @@ h4 {
 	color: #005051;
 }
 
+/* Comentários Usuários - Clientes */
 .comment1 {
 	background: white;
 	width: 500px;
 	height: 200px;
 	border-radius: 300px;
-	margin-top: 150px;
+	margin-top: 500px;
 	margin-bottom: 80px;
 	float: left;
 	margin-left: 20px;
@@ -144,7 +148,7 @@ h4 {
 	width: 500px;
 	height: 200px;
 	border-radius: 300px;
-	margin-top: 150px;
+	margin-top: 500px;
 	margin-bottom: 80px;
 	float: left;
 	text-align: center;
@@ -158,6 +162,8 @@ h4 {
 	position: relative;
 	bottom: 75px;
 }
+
+/* Footer */ 
 
 .footer {
   left: 0;
